--- a/views/pokemon.ejs
+++ b/views/pokemon.ejs
@@ -1,12 +1,12 @@
 <%- include("template/cabecera.ejs", {tituloWeb:'Panel de Administración'}) %>
 
-    <div class="container">
+    <div class="container mb-5">
 
         <h1 class="text-center display-3 p-5">CRUD Mongo - Pokémon</h1>
         <a class="btn btn-success btn-block my-4" href="/pokemon/crear">Crear un nuevo pokemon</a>
         <a class="btn btn-dark btn-block my-4" href="/">Volver</a>
 
-        <table class="table">
+        <table class="table mb-5">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
