--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -4,7 +4,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
-        <a class="text-white" href="https://www.linkedin.com/in/samuelbolivarvillanueva/">SAMU3AK CODES</a>
+        <a class="text-white" href="https://www.linkedin.com/in/samuelbolivarvillanueva/" target="_blank">SAMU3AK CODES</a>
     </div>
     <!-- Copyright -->
 </footer>
